Adding APEX 24.1 checks.
Final Commit for APEX 23.2.2 Release

--- a/app/yaml/pages/p00730.yaml
+++ b/app/yaml/pages/p00730.yaml
@@ -856,7 +856,7 @@ regions:
 - # ====== Region: 7 Desupported Features - <a href="https://doc
   id: 120323316913860389
   identification: 
-    title: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>'
+    title: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/24.1/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>'
     type: Static Content
 
   layout: 
@@ -895,15 +895,15 @@ regions:
       output-as: HTML
       expand-shortcuts: false
 
-- # ====== Region: 7.1 Desupported Utilities  ==================
+- # ====== Region: 7.1 Removed JSON Application Export =========
   id: 180000590782506356
   identification: 
-    title: '7.1 Desupported Utilities '
+    title: 7.1 Removed JSON Application Export
     type: Static Content
 
   layout: 
     sequence: 10
-    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 120323316913860389
+    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/24.1/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 120323316913860389
     position: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -933,7 +933,7 @@ regions:
 
   header-and-footer: 
     header-text: |
-      The APEXExport utility is desupported and is no longer included with Oracle APEX. Oracle recommends using SQLcl to perform export operations.<br>
+      The JSON application export option is removed. The Export Readable Format option is now a switch. If off, the application exports in SQL form. If on, the export file contains a human-readable YAML version of the application metadata.<br>
       <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> nothing to change / no check needed</b>
 
   server-cache: 
@@ -946,225 +946,6 @@ regions:
     settings: 
       output-as: HTML
       expand-shortcuts: false
-
-- # ====== Region: 7.2 Querying Template Component Metadata ====
-  id: 180003973264539200
-  identification: 
-    title: 7.2 Querying Template Component Metadata
-    type: Classic Report
-
-  source: 
-    location: Local Database
-    type: SQL Query
-    sql-query: |
-      select r.page_id
-            ,r.page_name
-            ,r.region_name
-      from apex_application_page_regions r
-      where r.application_id = :P0_APP_ID
-      and r.template_component_type_code is not null
-      and (r.attribute_01 is not null or --
-            r.attribute_02 is not null or --
-            r.attribute_03 is not null or --
-            r.attribute_04 is not null or --
-            r.attribute_05 is not null or --
-            r.attribute_06 is not null or --
-            r.attribute_07 is not null or --  
-            r.attribute_08 is not null or --
-            r.attribute_09 is not null or --  
-            r.attribute_10 is not null or --
-            r.attribute_11 is not null or --
-            r.attribute_12 is not null or --
-            r.attribute_13 is not null or --
-            r.attribute_14 is not null or --
-            r.attribute_15 is not null or --
-            r.attribute_16 is not null or --
-            r.attribute_17 is not null or --  
-            r.attribute_18 is not null or --
-            r.attribute_19 is not null or --  
-            r.attribute_20 is not null or --
-            r.attribute_21 is not null or --
-            r.attribute_22 is not null or --
-            r.attribute_23 is not null or --
-            r.attribute_24 is not null or --
-            r.attribute_25 is not null)
-    page-items-to-submit: 
-    - P0_APP_ID
-
-  layout: 
-    sequence: 20
-    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 120323316913860389
-    position: SUB_REGIONS
-    start-new-layout: false
-    start-new-row: true
-    column: Automatic
-    new-column: true
-    column-span: Automatic
-
-  appearance: 
-    template: Collapsible # 472863055415347688
-    template-options: 
-    - '#DEFAULT#'
-    - is-expanded
-    - t-Region--scrollBody
-    render-components: Above Content
-
-  accessibility: 
-    use-landmark: true
-    landmark-type: Template Default
-
-  advanced: 
-    static-id: av-232-desup-72
-    region-display-selector: false
-    exclude-title-from-translation: false
-
-  header-and-footer: 
-    header-text: |
-      For template components only, the ATTRIBUTE_01...ATTRIBUTE_25 columns of APEX_APPLICATION_PAGE_REGIONS and APEX_APPLICATION_PAGE_IR_COL public views now return null.<br />
-      Instead, use the new ATTRIBUTES column that stores a JSON object of all attribute values. Use the attribute's Static ID as the object key. Note that a table alias is always needed when using the JSON dot notation.
-
-  server-cache: 
-    caching: Disabled
-
-  customization: 
-    customizable: Not Customizable By End Users
-
-  attributes: 
-    layout: 
-      number-of-rows-type: Static Value
-      number-of-rows: 15
-
-    appearance: 
-      template-type: Theme
-      template: Standard # 472877522933347715
-      template-options: 
-      - '#DEFAULT#'
-      - t-Report--altRowsDefault
-      - t-Report--rowHighlight
-
-    pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
-      partial-page-refresh: true
-
-    performance: 
-      lazy-loading: false
-
-    messages: 
-      when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no Template Component with old Metadata used</b>
-
-    break-formatting: 
-      break-columns: No Break
-
-    advanced: 
-      strip-html: false
-      sort-nulls: Last
-
-    heading: 
-      type: Custom Headings
-
-    download: 
-      csv-export-enabled: false
-
-    printing: 
-      enabled: false
-
-  columns: 
-  - # ====== Column: PAGE_ID =====================================
-    id: 27005532494044543
-    identification: 
-      column-name: PAGE_ID
-      type: Plain Text
-
-    heading: 
-      heading: Page Id
-      alignment: end
-
-    layout: 
-      sequence: 10
-      column-alignment: end
-
-    accessibility: 
-      value-identifies-row: false
-
-    sorting: 
-      sortable: true
-
-    export-/-printing: 
-      include-in-export-/-print: true
-
-    advanced: 
-      compute-sum: false
-
-    ui-defaults-reference: 
-      table-owner: Parsing Schema
-
-    security: 
-      escape-special-characters: true
-
-  - # ====== Column: PAGE_NAME ===================================
-    id: 27005903316044545
-    identification: 
-      column-name: PAGE_NAME
-      type: Plain Text
-
-    heading: 
-      heading: Page Name
-      alignment: start
-
-    layout: 
-      sequence: 20
-      column-alignment: start
-
-    accessibility: 
-      value-identifies-row: false
-
-    sorting: 
-      sortable: true
-
-    export-/-printing: 
-      include-in-export-/-print: true
-
-    advanced: 
-      compute-sum: false
-
-    ui-defaults-reference: 
-      table-owner: Parsing Schema
-
-    security: 
-      escape-special-characters: true
-
-  - # ====== Column: REGION_NAME =================================
-    id: 27006360720044545
-    identification: 
-      column-name: REGION_NAME
-      type: Plain Text
-
-    heading: 
-      heading: Region Name
-      alignment: start
-
-    layout: 
-      sequence: 30
-      column-alignment: start
-
-    accessibility: 
-      value-identifies-row: false
-
-    sorting: 
-      sortable: true
-
-    export-/-printing: 
-      include-in-export-/-print: true
-
-    advanced: 
-      compute-sum: false
-
-    ui-defaults-reference: 
-      table-owner: Parsing Schema
-
-    security: 
-      escape-special-characters: true
 
 - # ====== Region: 5.1 Deprecated APIs =========================
   id: 216850614825287391
