APEX 24.1 final changes in readme and manifest

--- a/manifest.json
+++ b/manifest.json
@@ -40,6 +40,16 @@
             "url": "https://github.com/OliverLemm/apex-visualizer",
             "source": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v23.2.2/app/apex_visualizer.sql",
             "zip": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v23.2.2/app/apex_visualizer.zip"
+        },{
+            "internalName": "APEX_VISUALIZER_24_1",
+            "name": "APEX Visualizer 23.1.0",
+            "description": "An APEX Application, which can visualize many details of all applications in the same workspace. This version requires APEX 24.1 or higher.",
+            "author": "Oliver Lemm",
+            "version": "23.1.0",
+			"icon" : "",
+            "url": "https://github.com/OliverLemm/apex-visualizer",
+            "source": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v24.1.0/app/apex_visualizer.sql",
+            "zip": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v24.1.0/app/apex_visualizer.zip"
         }
     ]
 }
