--- a/app/yaml/pages/p00708.yaml
+++ b/app/yaml/pages/p00708.yaml
@@ -165,7 +165,7 @@ regions:
 
     pagination: 
       type: Row Ranges X to Y (no pagination)
-      display-position: Bottom - Right
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
@@ -595,7 +595,7 @@ regions:
 
     pagination: 
       type: Row Ranges X to Y (no pagination)
-      display-position: Bottom - Right
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
@@ -834,7 +834,7 @@ regions:
 
     pagination: 
       type: Row Ranges X to Y (no pagination)
-      display-position: Bottom - Right
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
