--- a/app/yaml/pages/p00705.yaml
+++ b/app/yaml/pages/p00705.yaml
@@ -106,7 +106,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 99999999
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -122,7 +122,7 @@ regions:
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no openModal or closeModal used</b>
@@ -409,7 +409,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 99999999
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -425,7 +425,7 @@ regions:
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no apex.theme42.util.mq used</b>
@@ -713,7 +713,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 99999999
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -729,7 +729,7 @@ regions:
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no apex.theme42.util.mq used</b>
@@ -972,7 +972,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 9999999
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -988,7 +988,7 @@ regions:
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no Tabular Forms used</b>
@@ -1166,7 +1166,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 15
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -1177,11 +1177,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: No Pagination (Show All Rows)
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no Vista Theme Style is used</b>
@@ -1293,7 +1294,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 9999999
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -1309,7 +1310,7 @@ regions:
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no Post Calculation for Page Items used</b>
@@ -1524,7 +1525,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 9999999
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -1540,7 +1541,7 @@ regions:
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no Show / Hide All Page Items On Same Line attributes used</b>
@@ -1757,7 +1758,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 99999999
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -1773,7 +1774,7 @@ regions:
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no apex.widget.initPageItem used</b>
