--- a/app/yaml/pages/p00706.yaml
+++ b/app/yaml/pages/p00706.yaml
@@ -149,12 +149,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> No APEX_UTIL.STRING_TO_TABLE is used.</b>
@@ -376,12 +376,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> No APEX_UTIL.TABLE_TO_STRING is used.</b>
@@ -600,12 +600,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> No APEX_PAGE.IS_JQM_SMARTPHONE_UI is used.</b>
@@ -868,7 +868,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 99999999
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -884,7 +884,7 @@ regions:
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no openModal or closeModal used</b>
@@ -1130,7 +1130,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 9999999
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -1146,7 +1146,7 @@ regions:
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no Tabular Forms used</b>
@@ -1346,12 +1346,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> No apex.event.trigger( "#myRegionStaticID", "apexrefresh" ) is used.</b>
@@ -1604,7 +1604,7 @@ regions:
 
     pagination: 
       type: Row Ranges X to Y (no pagination)
-      display-position: Bottom - Right
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
@@ -1766,7 +1766,7 @@ regions:
 
     pagination: 
       type: Row Ranges X to Y (no pagination)
-      display-position: Bottom - Right
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
