--- a/app/yaml/pages/p00710.yaml
+++ b/app/yaml/pages/p00710.yaml
@@ -153,7 +153,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 15
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -164,12 +164,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no API calls used</b>
@@ -638,7 +638,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 15
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -649,12 +649,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no API calls used</b>
@@ -994,7 +994,7 @@ regions:
 
     pagination: 
       type: Row Ranges X to Y (no pagination)
-      display-position: Bottom - Right
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
@@ -1313,7 +1313,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 15
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -1324,12 +1324,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no tables or columns used</b>
@@ -1608,7 +1608,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 15
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -1619,12 +1619,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no Deprecated Attributes in App Builder used</b>
@@ -1822,12 +1822,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no Region Image and Image Tag Attributes used</b>
@@ -2189,7 +2189,7 @@ regions:
   attributes: 
     layout: 
       number-of-rows-type: Static Value
-      number-of-rows: 15
+      number-of-rows: 99999
 
     appearance: 
       template-type: Theme
@@ -2200,12 +2200,12 @@ regions:
       - t-Report--rowHighlight
 
     pagination: 
-      type: Row Ranges X to Y (with next and previous links)
-      display-position: Bottom - Right
+      type: Row Ranges X to Y (no pagination)
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
-      lazy-loading: false
+      lazy-loading: true
 
     messages: 
       when-no-data-found: <b><span aria-hidden="true" class="fa fa-check-circle u-success-text"></span> no Desupported View Columns used</b>
@@ -2462,7 +2462,7 @@ regions:
 
     pagination: 
       type: Row Ranges X to Y (no pagination)
-      display-position: Bottom - Right
+      display-position: Top and Bottom - Right
       partial-page-refresh: true
 
     performance: 
